--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.7.2",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "eslint": "^7.32.0",
@@ -50,6 +51,7 @@
     "helmet": "^4.6.0",
     "mongoose": "^6.0.1",
     "mongoose-autopopulate": "^0.14.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "swagger-ui-express": "^4.1.6"
   }
 }
